refactored Makefile clean target, updated Dockerfile to build smoke binary from correct client, and improved etcd endpoint parsing in wire_grpc_etcd.go

--- a/deploy/docker/Dockerfile
+++ b/deploy/docker/Dockerfile
@@ -6,6 +6,7 @@ ARG TAGS
 ARG GOOS
 ARG GOARCH
 
+# Build a static binary so runtime image has no libc dependency surprises. This keeps the final image minimal and portable.
 ENV CGO_ENABLED=0
 
 COPY go.mod go.sum ./
@@ -14,7 +15,7 @@ RUN go mod download
 COPY . .
 
 RUN GOOS="${GOOS}" GOARCH="${GOARCH}" go build -tags="${TAGS}" -o /build/sandstore ./cmd/sandstore
-RUN GOOS="${GOOS}" GOARCH="${GOARCH}" go build -o /build/smoke ./clients/client
+RUN GOOS="${GOOS}" GOARCH="${GOARCH}" go build -o /build/smoke ./clients/open_smoke
 
 FROM alpine:latest AS runner
 
