enhanced Kubernetes deployment with new job and service configurations, updated Makefile for architecture support, and improved .gitignore for local cache management

--- a/deploy/k8s/statefulset-sandstore.yaml
+++ b/deploy/k8s/statefulset-sandstore.yaml
@@ -19,8 +19,8 @@ spec:
     spec:
       containers:
         - name: sandstore
-          image: sandstore-node:latest
-          imagePullPolicy: Always
+          image: anishm7030/sandstore-node:default-etcd-latest
+          imagePullPolicy: IfNotPresent
           ports:
             - name: raft
               containerPort: 8080
