--- a/deploy/k8s/storageclass.yaml
+++ b/deploy/k8s/storageclass.yaml
@@ -2,7 +2,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: sandstore-local-ssd
-provisioner: rancher.io/local-path
+provisioner: docker.io/hostpath
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
 allowVolumeExpansion: true
